# bump-and-go-with-fsm-regiros

./: CMakeLists.txt  README.md  package.xml
config/: BumpGoConfig.yaml
include/fsm_bump_go/: BaseDetected.h  BumpGo.h  BumpGoEficiente.h  BumpGoLaser.h  Laser.h
launch/: bumpgo.launch  bumpgoeficiente.launch  bumpgolaser.launch
src/: bumpgoeficiente_node.cpp  bumpgolaser_node.cpp
src/fsm_bump_go/: BumpGo.cpp  BumpGoEficiente.cpp  BumpGoLaser.cpp
tests/: BumpGoEficiente_Test.cpp  BumpGo_Test.cpp
